Add JIT watch required switches to batch file